[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Tetris/TetrisBoard.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Tetris/gray tetris bg.png" type="Texture" id=3]

[node name="TetrisBoard" type="Node2D"]
script = ExtResource( 1 )
ref_sprite = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
self_modulate = Color( 0.121569, 0, 0.207843, 1 )
texture = ExtResource( 3 )
centered = false

[node name="BlockDaddy" type="Timer" parent="."]
wait_time = 10.0

[node name="BlockGravity" type="Timer" parent="."]

[node name="Pieces" type="Node2D" parent="."]

[connection signal="timeout" from="BlockDaddy" to="." method="_on_BlockDaddy_timeout"]
[connection signal="timeout" from="BlockGravity" to="." method="_on_BlockGravity_timeout"]
